<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/dialog_flick_main_layout"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:background="@drawable/background_ios"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/dialog_flick_part_1"
        android:visibility="visible"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/dialog_flick_spam_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dialog_flick_spam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/report_spam"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/divider"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/dialog_flick_inappropriate_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/dialog_flick_inappropriate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/report_inappropriate"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/divider"/>

        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/dialog_flick_delete_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dialog_flick_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/delete_flick"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/divider"/>

        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/dialog_flick_update_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dialog_flick_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/update_flick"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/divider"/>

        </LinearLayout>

        <TextView
            android:id="@+id/dialog_flick_copy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/copy_share_url"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/divider"/>

        <TextView
            android:id="@+id/dialog_flick_whatsapp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/share_on_whatsapp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

    <!--<LinearLayout
        android:id="@+id/dialog_flick_part_2"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/divider">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:text="@string/delivery_preference"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/dialog_flick_urgent_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/red">

            <TextView
                android:id="@+id/dialog_flick_urgent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:text="@string/urgent"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/dialog_flick_important_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/green">
            <TextView
                android:id="@+id/dialog_flick_important"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:text="@string/important"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp" />

            <View
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/divider"/>

        </LinearLayout>

    </LinearLayout>-->

    <LinearLayout
        android:id="@+id/dialog_flick_part_2"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/delivery_preference"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/dialog_flick_urgent_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white">

            <TextView
                android:id="@+id/dialog_flick_urgent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/red"
                android:text="@string/urgent"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/dialog_flick_important_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white">
            <TextView
                android:id="@+id/dialog_flick_important"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/green"
                android:text="@string/important"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp" />

            <View
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/divider"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>